src/css/imports/typography.css
@font-face {
  font-family: 'Suisse Works';
  font-style: normal;
  font-weight: 400;
  src:
    url('/fonts/SuisseWorks-Regular-WebS.woff2') format('woff2'),
    url('/fonts/SuisseWorks-Regular-WebS.woff') format('woff');
}

@font-face {
  font-family: 'Suisse Works Italic';
  font-style: italic;
  font-weight: 400;
  src:
    url('/fonts/SuisseWorks-RegularItalic-WebS.woff2') format('woff2'),
    url('/fonts/SuisseWorks-RegularItalic-WebS.woff') format('woff');
}

@font-face {
  font-family: 'Suisse Intl Mono';
  font-style: normal;
  font-weight: 400;
  src:
    url('/fonts/SuisseIntlMono-Regular-WebS.woff2') format('woff2'),
    url('/fonts/SuisseIntlMono-Regular-WebS.woff') format('woff');
}

body,
html {
  font-size: 62.5%;
  font-family: 'Suisse Intl Mono', serif;
}

p {
  font-size: 1.4rem;
  @media (--medium) {
    font-size: 1.6rem;
  }
}

h1 {
  font-family: 'Suisse Works', serif;
  color: var(--tedPrimary);
  font-weight: 400;
  font-size: 6.2rem;
  text-align: center;
  line-height: 1.1;
  margin: 3.2rem 0;
  @media (--medium) {
    font-size: 14.8rem;
  }
}

h3 {
  color: var(--black);
  font-weight: 400;
  font-size: 1.2rem;
  text-align: center;
  margin-bottom: 0.8rem;
  text-transform: uppercase;
}

.details {
  text-align: center;
}

.details__date {
  display: inline-block;
  padding: 0 2.4rem;
}

.details__value {
  color: var(--tedPrimary);
  font-size: 2.4rem;
  display: inline-block;
}

.details__label {
  font-size: 1.2rem;
  text-transform: uppercase;
}

a:link, a:visited {
  color: var(--tedPrimary);
  font-size: 1.2rem;
  text-transform: uppercase;
}

a:hover {
  text-decoration: none;
}

